# age-and-gender

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
age_and_gender.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
example/: SIL Open Font License.txt  example-with-face-recognition.py  example.py
src/: main.cpp
